--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: sans-serif;
+  transition: 0.1s ease;
 }
 
 #darkModeToggle {
